--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -41,6 +41,7 @@ android {
     }
 
     defaultConfig {
+        multiDexEnabled true
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.hari.poraali.poraali"
         // You can update the following values to match your application needs.
@@ -49,6 +50,10 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        // We need an empty manifestPlaceholders for appauth to not throw an error
+        manifestPlaceholders += [
+                'appAuthRedirectScheme': ''
+        ]
     }
 
     buildTypes {
