--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   feather_icons: ^1.2.0
   flutter_screenutil: ^5.9.0
   carousel_slider: ^4.2.1
+  supabase_flutter: ^1.10.23
+  flutter_appauth: ^6.0.2
+  crypto: ^3.0.3
+  google_sign_in: ^6.1.5
+  flutter_svg: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -62,10 +67,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/images/signin_balls.png
+    - assets/svgs/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
